Name of the outputs correspond to the configuration file

--- a/IFNumParameters.conf
+++ b/IFNumParameters.conf
@@ -7,13 +7,13 @@ DomainBL 4.0 -34.5 -1000.0
 DomainTR 16.0 -14.0 -100.0
 
 # Interparticle distance (third component, depth, is not used)
-InterSpacing 0.2 0.2 1
+InterSpacing 0.15 0.15 1
 
 # Lagrangian Engine
-Vsink 100
+Vsink 50
 
-# Number of Points
-NumPoints 100000
+# Number of Points per cell
+NumPoints 500000
 
 # Deposition date of tracers dd mm yyyy
 DepositionDate 20 08 0008
