--- a/chistParams.conf
+++ b/chistParams.conf
@@ -1,16 +1,11 @@
 #################################################################################
-# PARAMETERS InFlux CODE
+# PARAMETERS chist CODE
 #################################################################################
 
 # Study domain lon(degrees) lat(degrees) depth (meters)
 DomainBL 4.0 -34.5 -1000.0
 DomainTR 16.0 -14.0 -100.0
-
-# Interparticle distance (third component, depth, is not used)
 InterSpacing 0.05 0.05 1
-
-# Lagrangian Engine
-Vsink 100
 
 # Deposition date of tracers dd mm yyyy
 DepositionDate 20 08 0008
@@ -18,8 +13,16 @@ DepositionDate 20 08 0008
 # Integration Time step (in days):
 # * Negative value => Backward integration
 # * Positive value => Forward integration
-
 TimeStep 0.25
+
+# Number of particles per sample area
+Nparticles 1000
+
+# Radius of sample area (meters)
+Radius 20000
+
+# Lagrangian Engine
+Vsink 50
 
 # Offline Model parameters
 VModelDir /scratch/pmonroy/
