Last version OK. Coarse grained is computed separately

--- a/chistParams.conf
+++ b/chistParams.conf
@@ -22,7 +22,9 @@ Nparticles 1000
 Radius 20000
 
 # Lagrangian Engine
-Vsink 50
+Random 1
+Vsink 100
+Diffusivity 10.0 10.0 1.0e-5
 
 # Offline Model parameters
 VModelDir /scratch/pmonroy/
